Ensure that the question appears for all screen sizes and that you can clearly see the answer you are inputting. (Checked on Nexus 10 inch and Nexus One). Until someone comes up with a better solution

--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -40,21 +40,25 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:scaleType="fitXY"
-            android:layout_marginBottom="80dp"
+            android:layout_marginBottom="60dp"
             android:background="@drawable/speech"
             >
 
             <TextView android:id="@+id/question"
+                android:gravity="top|center"
                 android:layout_marginTop="20dp"
-                android:layout_marginLeft="15dp"
+                android:text="TEST"
                 android:textSize="18sp"
                 android:layout_height="match_parent"
                 android:layout_width="match_parent"
                 />
             <EditText android:id="@+id/user_answer"
+                android:text=""
                 android:layout_gravity="center"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginEnd="30dp"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:maxLength="10"
@@ -64,6 +68,7 @@
             <ImageView android:id="@+id/solved"
                 android:layout_gravity="end"
                 android:layout_marginRight = "15dp"
+                android:layout_marginEnd="15dp"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@drawable/right"
