Fix timer so that the application won't crash if the user temporarily exits the application on the question screen. Also tweaked a bit of text positioning in the speech bubble

--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -43,9 +43,9 @@
             android:layout_marginBottom="60dp"
             android:background="@drawable/speech"
             >
-
             <TextView android:id="@+id/question"
                 android:gravity="top|center"
+                android:paddingRight="10dp"
                 android:layout_marginTop="20dp"
                 android:text="TEST"
                 android:textSize="18sp"
@@ -53,15 +53,15 @@
                 android:layout_width="match_parent"
                 />
             <EditText android:id="@+id/user_answer"
-                android:text=""
                 android:layout_gravity="center"
                 android:layout_marginLeft="30dp"
                 android:layout_marginStart="30dp"
                 android:layout_marginRight="30dp"
                 android:layout_marginEnd="30dp"
                 android:layout_height="wrap_content"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:maxLength="10"
+                android:hint="          "
                 android:textSize="18sp"
                 />
             <!--Set to some image either tick or cross when user answers a question-->
