--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
         android:text="@string/button_score"
         />
     <Button
-        android:id="@+id/acheive"
+        android:id="@+id/achieve"
         android:layout_row="2"
         android:layout_column="0"
         android:layout_width="match_parent"
@@ -56,7 +56,14 @@
         android:layout_height="wrap_content"
         android:text="@string/button_settings"
         />
-
+    <Button
+        android:id="@+id/about"
+        android:layout_row="4"
+        android:layout_column="0"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/button_about"
+        />
 
 
 
