--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.welovekids.mathforkids.AboutActivity">
+    tools:context="com.welovemaths.mathforkids.AboutActivity">
     <TextView
         android:id="@+id/author"
         android:layout_width="match_parent"
