--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
     android:columnCount="4"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.welovekids.mathforkids.MainActivity">
+    tools:context="com.welovemaths.mathforkids.MainActivity">
     <!--<TextView android:id="@+id/start"-->
         <!--android:layout_width="wrap_content"-->
         <!--android:layout_height="wrap_content"-->
