--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -7,7 +7,7 @@
     android:layout_gravity="center"
     android:background="@drawable/blackboard"
     android:padding="@dimen/activity_vertical_margin"
-    tools:context="com.welovekids.mathforkids.Score">
+    tools:context="com.welovemaths.mathforkids.ScoreActivity">
         <TextView android:id="@+id/totalCorrect"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
